# lexi-navigator-client

./: .gitignore  README.md  forge.config.ts  package-lock.json  package.json  tsconfig.json  vite.base.config.ts  vite.main.config.ts  vite.renderer.config.ts
src/common/: const.ts  electron-api.d.ts  translate_api.ts
src/main/: base.ts  floatwind.ts  main.ts  translate.ts
src/preload/: preload.ts
src/renderer/: App.tsx  index.html  renderer.tsx
src/renderer/assets/styles/scss/: translate.scss
src/renderer/components/: CardInfo.tsx  Home.tsx  SidebarDrawer.tsx  Textarea.tsx  Translate.tsx  TranslateSimple.tsx  WindowResizeListener.tsx
src/renderer/components/ipc/: TranslateAPI.ts  translate_api.ts
src/renderer/themes/: globalTheme.tsx  index.tsx  lightTheme.tsx  transTheme.tsx
src/system/kmhook/: CMakeLists.txt  binding.gyp  build.sh  index.d.ts  index.ts  kmhook_binding.cpp  package-lock.json  package.json  test.js
src/system/kmhook/src/: kmhook_base.h  kmhook_def.h  kmhook_macos.cpp  kmhook_macos.h
